<resources>
    <string name="app_name">Quiz App</string>
    <string name="entrarLogin">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="n_o_tem_cadastro">Não tem cadastro?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="quizero">QUIZero</string>
    <string name="nome">Nome</string>
    <string name="por_favor">Por favor, digite seu nome!</string>
</resources>