<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".unused.RegisterActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_backzinsplash"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_margin="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/cadastrar"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"/>
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/nome"
            android:textSize="17sp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/corner"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/email"
            android:textSize="17sp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/corner"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/senha"
            android:textSize="17sp"
            android:textColor="#ffffff" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_margin="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/corner"
            android:hint="@string/senha"
            android:inputType="numberPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="17sp" />

       <Button
           android:layout_width="match_parent"
           android:layout_height="?actionBarSize"
           android:layout_margin="20dp"
           android:layout_marginStart="10dp"
           android:layout_marginLeft="10dp"
           android:background="@drawable/corner_button"
           android:text="@string/cadastrar"
           android:textColor="@color/white"
           android:textSize="17sp" />

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>